<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">MathFlick</string>
    <string name="math_flick" translatable="false">MathFlick</string>
    <string name="class1" translatable="false">Class 1</string>
    <string name="class2" translatable="false">Class 2</string>
    <string name="class3" translatable="false">Class 3</string>
    <string name="class4" translatable="false">Class 4</string>
    <string name="class5" translatable="false">Class 5</string>
    <string name="class6" translatable="false">Class 6</string>
    <string name="class7" translatable="false">Class 7</string>
    <string name="class8" translatable="false">Class 8</string>
    <string name="class9" translatable="false">Class 9</string>
    <string name="class10" translatable="false">Class 10</string>
    <string name="class11" translatable="false">Class 11</string>
    <string name="class12" translatable="false">Class 12</string>
    <string name="trignometry">Trignometry</string>
    <string name="sine">Sine</string>
    <string name="cosine">Cosine</string>
    <string name="real_numbers">Real Numbers</string>
    <string name="polynomials">Polynomials</string>
    <string name="linear_equation_in_two_variables">Linear Equation in Two Variables</string>
    <string name="quadratic_equation">Quadratic Equation</string>
    <string name="arithmetic_progression">Arithmetic Progression</string>
    <string name="triangles">Triangles</string>
    <string name="circle">Circles</string>
    <string name="statistics">Statistics</string>
    <string name="probability">Probability</string>
    <string name="coordinate_geometry">Coordinate Geometry</string>
    <string name="surface_area_and_volume">Surface Area And Volume</string>
    <string name="cosinef">cos(a) = B/C</string>
    <string name="inversecosine">Cos-1</string>
    <string name="calculate">Calculate</string>
    <string name="reset">Reset</string>
    <string name="result">Result</string>
    <string name="sinef">sin(a) = A/C</string>
    <string name="inversesine">sin-1</string>
    <string name="sineDetail">where,\nA is Side Opposite to angle a \nC is Hypotenuse</string>
    <string name="cosineDetail">where,\nB is Side Adjacent to angle a \nC is Hypotenuse</string>
    <string name="tan">tan</string>
    <string name="inversetan">tan-1</string>
    <string name="tanDetail">where,\nA is Side Opposite to angle a \nB is Side Adjacent to angle a</string>
    <string name="tanf">tan(a) = A/B</string>
    <string name="tangent">Tan</string>
    <string name="cotant">Cot</string>
    <string name="cot">cot</string>
    <string name="inversecot">cot-1</string>
    <string name="cotDetail">where,\nB is Side Adjacent to angle a \nA is Side Opposite to angle a</string>
    <string name="cotf">cot(a) = B/A</string>
    <string name="cosecf">cosec(a) = C/A</string>
    <string name="inversecosec">cosec-1</string>
    <string name="cosecDetail">where, \nC is Hypotenuse \nA is Side Opposite to angle a </string>
    <string name="secf">sec(a) = C/B</string>
    <string name="inversesec">sec-1</string>
    <string name="secDetail">where, \nC is Hypotenuse \nB is Side Adjacent to angle a </string>
    <string name="cosec">cosec</string>
    <string name="sec">sec</string>
    <string name="cosecant">Cosec</string>
    <string name="secant">Sec</string>
    <string name="arith_a">a (first Term)</string>
    <string name="arith_an">an (nth Term)</string>
    <string name="arith_d">d (difference)</string>
    <string name="arith_sn">Sn (Sum of n Terms)</string>
    <string name="arith_prog">*Enter Any 3 Values</string>
    <string name="arith_n">n (Number of terms)</string>
    <string name="arithprogf">A.P. :</string>
    <string name="arith_prog_detail">a is first number, d is difference,\n an = a + (n-1)d,\n Sn = (n/2)(2a + (n-1)d)</string>
    <string name="logo">logo</string>
    <string name="real_numb">*Enter 2 Numbers</string>
    <string name="real_numb1">First Number</string>
    <string name="real_numb2">Second Number</string>
    <string name="real_numbf">H.C.F\n\nL.C.M.</string>
    <string name="real_numb_detail">Highest Common Factor\n\nLeast Common Multiple</string>
    <string name="zeroes">Zeroes</string>
    <string name="division">Polynomial\nDivision</string>
    <string name="linear_eqn">*Enter both equations in above form</string>
    <string name="linear_eqn_a">First Equation :</string>
    <string name="linear_eqn_b">Second Equation :</string>
    <string name="find">Find</string>
    <string name="linear_eqn_detail">Equation should be in form :\nax + by = c\n where, a,b &amp; c are constants.</string>
    <string name="quad_eqn_detail">\tForm \t\t\t\t\t\t\t\t\t\t: \t ax^2 + bx + c=0\n
        \tDeterminant (D) \t: \t D = b^2 - 4ac \n
        \tSolution (x) \t\t\t\t: \t x = (-b + √D)/2a and (-b - √D)/2a</string>
    <string name="quad_eqn1">*Enter values of a, b &amp; c</string>
    <string name="quad_eqn1_a">a (Coefficient of x^2)</string>
    <string name="quad_eqn1_b">b (Coefficient of x)</string>
    <string name="quad_eqn1_c">c (Constant Term)</string>
    <string name="pythagorus">Pythagorus\nTheorem</string>
    <string name="area">Area</string>
    <string name="distanceFormula">Distance\nFormula</string>
    <string name="sectionFormula">Section\nFormula</string>
    <string name="circle_detail">Circumference , C = 2&#928;r \n Area , A = &#928;r^2 \nwhere, r is radii of circle </string>
    <string name="cuboid">Cuboid</string>
    <string name="cube">Cube</string>
    <string name="sphere">Sphere</string>
    <string name="cone">Cone</string>
    <string name="cylinder">Cylinder</string>
    <string name="hemisphere">Hemisphere</string>
    <string name="variable_x">x</string>
    <string name="addition_opr">+</string>
    <string name="variable_y">y</string>
    <string name="eql_opr">=</string>
    <string name="polynomial_detail">Polynomials are of form : \n ax^2 +bx +c \nor\n ax^3+bx^2+cx+d</string>
    <string name="polynomial_highlight">*Enter the values of coefficient</string>
    <string name="polynomial_a">Polynomial :</string>
    <string name="variable_x3">x^3</string>
    <string name="variable_x2">x^2</string>
    <string name="pythagorus_detail">*Enter any 2 values</string>
    <string name="base_b">B (Base)</string>
    <string name="perpendicular_b">P (Perpendicular)</string>
    <string name="hypotenuse_h">H (Hypotenuse)</string>
    <string name="pythagorus_d">Pythagorus Theorem states that, \n H^2 = P^2 +B^2 \n for a Right Angled Triangle</string>
    <string name="area_d">Area of Triangle = (B x H)/2 \n OR \n By heron\'s formula = √(s x (s-A) x (s-b) x (s-c)) \n where, s = (a + b +c)/3\n OR \n Area of Equilateral Triangle = √3 x a / 4</string>
    <string name="area_detail">*Select any one :</string>
    <string name="Spaces">"    "</string>
    <string name="side_a">Side A (a)</string>
    <string name="side_b">Side B (b)</string>
    <string name="side_c" tools:ignore="TypographyOther">Side C (c)</string>
    <string name="side_s">Side S (s)</string>
    <string name="coordinate_d">Distance Formula :\n \n Section Formula :\n </string>
    <string name="circle_d">Area of Circle : πr^2\n \n Area of Sector : (θ/360)πr^2\n </string>
    <string name="x1">x1</string>
    <string name="x2">x2</string>
    <string name="y1">y1</string>
    <string name="y2">y2</string>
    <string name="m">m</string>
    <string name="n">n</string>
    <string name="coGeo_detail">*Select any one</string>
    <string name="radius">R (radius)</string>
    <string name="angle">θ (Angle)</string>
    <string name="cube_d">Total Surface Area  = 6*a*a\n\nCurved Surface Area = 4*a*a\n\nVolume of cube = a*a*a </string>
    <string name="cuboid_d">Total Surface Area  = 2(lb+bh+hl)\n\nCurved Surface Area = 2*h(l+b)\n\nVolume of cuboid = l*b*h </string>
    <string name="sphere_d">Total Surface Area  = 4πr^2\n\nCurved Surface Area = 4πr^2\n\nVolume of cube = (4/3)πr^3 </string>
    <string name="cone_d">Total Surface Area = πr(r+l)\n\nCurved Surface Area = πrl\n\nVolume of cube = 1/3πr^2h</string>
    <string name="cylinder_d">Total Surface Area = 2πr(r+h)\n\nCurved Surface Area = 2πrh\n\nVolume of cube = πr^2h</string>
    <string name="hemisphere_d">Total Surface Area = 3πr^2\n\nCurved Surface Area = 2πr^2\n\nVolume of cube = 2/3π*r^3</string>
    <string name="cubeSide">Side (a)</string>
    <string name="cubeTSA">TSA</string>
    <string name="cubeCSA">CSA</string>
    <string name="cubeV">Volume</string>
    <string name="cuboidL">l (Length)</string>
    <string name="cuboidH">h (Height)</string>
    <string name="cuboidB">b (Breadth)</string>
    <string name="cubeInstruct">*Enter any one value</string>
    <string name="cuboidInstruct">*Enter any 3 values</string>
    <string name="sphere_r">r (Radius)</string>
    <string name="sphereInstruct">*Enter any one Value</string>
    <string name="coneInstruct">*Enter any two values</string>
    <string name="sphere_l">l (Slant Height)</string>
    <string name="theta">θ (Angle)</string>

    <string-array name="area_triangle">
        <item>Area of Triangle</item>
        <item>Heron\'s Formula</item>
        <item>Equilateral Triangle</item>
    </string-array>

    <string-array name="coordinate_geo">
        <item>Distance Formula</item>
        <item>Section Formula</item>
    </string-array>

    <string-array name="circle">
        <item>Area of Circle</item>
        <item>Area of Sector</item>
    </string-array>

    <string-array name="surface_a_v">
        <item>Cube</item>
        <item>Cuboid</item>
        <item>Sphere</item>
        <item>Cone</item>
        <item>Cylinder</item>
        <item>Hemisphere</item>
    </string-array>

</resources>
