<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:scrollbars="none"
    tools:context=".MainActivity">

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:stretchColumns="0,1">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="8dp"
            android:baselineAligned="false"
            android:paddingBottom="8dp">

            <Button
                android:id="@+id/class1"
                style="@style/AppTheme"
                android:layout_width="240dp"
                android:layout_height="180dp"
                android:layout_column="0"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:background="@drawable/gradient"
                android:text="@string/class1"
                android:gravity="bottom|center"
                android:paddingBottom="6dp"
                android:textColor="#ffffff"
                android:textSize="24sp" />

            <Button
                android:id="@+id/class2"
                style="@style/AppTheme"
                android:layout_width="240dp"
                android:layout_height="180dp"
                android:layout_column="1"
                android:layout_marginStart="15dp"
                android:layout_weight="1"
                android:background="@drawable/gradient1"
                android:text="@string/class2"
                android:textColor="#ffffff"
                android:gravity="bottom|center"
                android:paddingBottom="6dp"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:baselineAligned="false"
            android:paddingTop="8dp"
            android:paddingBottom="8dp">

            <Button
                android:id="@+id/class3"
                style="@style/AppTheme"
                android:layout_width="240dp"
                android:layout_height="180dp"
                android:layout_column="0"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:background="@drawable/gradient2"
                android:text="@string/class3"
                android:textColor="#ffffff"
                android:gravity="bottom|center"
                android:paddingBottom="6dp"
                android:textSize="24sp" />

            <Button
                android:id="@+id/class4"
                style="@style/AppTheme"
                android:layout_width="240dp"
                android:layout_height="180dp"
                android:layout_column="1"
                android:layout_marginStart="15dp"
                android:layout_weight="1"
                android:background="@drawable/gradient3"
                android:text="@string/class4"
                android:textColor="#ffffff"
                android:gravity="bottom|center"
                android:paddingBottom="6dp"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="8dp"
            android:baselineAligned="false"
            android:paddingBottom="8dp">

            <Button
                android:id="@+id/class5"
                style="@style/AppTheme"
                android:layout_width="240dp"
                android:layout_height="180dp"
                android:layout_column="0"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:background="@drawable/gradient4"
                android:text="@string/class5"
                android:textColor="#ffffff"
                android:gravity="bottom|center"
                android:paddingBottom="6dp"
                android:textSize="24sp" />

            <Button
                android:id="@+id/class6"
                style="@style/AppTheme"
                android:layout_width="240dp"
                android:layout_height="180dp"
                android:layout_column="1"
                android:layout_marginStart="15dp"
                android:layout_weight="1"
                android:background="@drawable/gradient5"
                android:text="@string/class6"
                android:textColor="#ffffff"
                android:gravity="bottom|center"
                android:paddingBottom="6dp"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:baselineAligned="false">

            <Button
                android:id="@+id/class7"
                style="@style/AppTheme"
                android:layout_width="240dp"
                android:layout_height="180dp"
                android:layout_column="0"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:background="@drawable/gradient6"
                android:text="@string/class7"
                android:textColor="#ffffff"
                android:gravity="bottom|center"
                android:paddingBottom="6dp"
                android:textSize="24sp" />

            <Button
                android:id="@+id/class8"
                style="@style/AppTheme"
                android:layout_width="240dp"
                android:layout_height="180dp"
                android:layout_column="1"
                android:layout_marginStart="15dp"
                android:layout_weight="1"
                android:background="@drawable/gradient7"
                android:text="@string/class8"
                android:textColor="#ffffff"
                android:gravity="bottom|center"
                android:paddingBottom="6dp"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="8dp"
            android:baselineAligned="false"
            android:paddingBottom="8dp">

            <Button
                android:id="@+id/class9"
                style="@style/AppTheme"
                android:layout_width="240dp"
                android:layout_height="180dp"
                android:layout_column="0"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:background="@drawable/gradient8"
                android:text="@string/class9"
                android:textColor="#ffffff"
                android:gravity="bottom|center"
                android:paddingBottom="6dp"
                android:textSize="24sp" />

            <Button
                android:id="@+id/class10"
                style="@style/AppTheme"
                android:layout_width="240dp"
                android:layout_height="180dp"
                android:layout_column="1"
                android:layout_marginStart="15dp"
                android:layout_weight="1"
                android:background="@drawable/gradient9"
                android:text="@string/class10"
                android:textColor="#ffffff"
                android:gravity="bottom|center"
                android:paddingBottom="6dp"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="8dp"
            android:baselineAligned="false"
            android:paddingBottom="8dp">

            <Button
                android:id="@+id/class11"
                style="@style/AppTheme"
                android:layout_width="240dp"
                android:layout_height="180dp"
                android:layout_column="0"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:background="@drawable/gradient10"
                android:text="@string/class11"
                android:textColor="#ffffff"
                android:gravity="bottom|center"
                android:paddingBottom="6dp"
                android:textSize="24sp" />

            <Button
                android:id="@+id/class12"
                style="@style/AppTheme"
                android:layout_width="240dp"
                android:layout_height="180dp"
                android:layout_column="1"
                android:layout_marginStart="15dp"
                android:layout_weight="1"
                android:background="@drawable/gradient11"
                android:text="@string/class12"
                android:textColor="#ffffff"
                android:gravity="bottom|center"
                android:paddingBottom="6dp"
                android:textSize="24sp" />
        </TableRow>

    </TableLayout>
</ScrollView>
